--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 concurrency:
   group: ${{ github.head_ref }}
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
-        python-version: '3.7.0'
+        python-version: '3.7.12'
         cache: 'pip'
     - name: Install dependencies
       run: pip install -r requirements.txt
